# ChatXpress

./: .env  .gitignore  Dockerfile  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  ui.config.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  api.ts  index.tsx  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20231111193729_create_history_table.sql  20231111200159_create_assistants_table.sql  20231116013201_history_assistant_foreign_key.sql  20240123211329_history_table.sql  20240202033722_api_key.sql
src-tauri/plugins/assistant_api/: pyproject.toml
src-tauri/plugins/assistant_api/assistant_api/: main.py
src-tauri/plugins/oai_price_tracker/: pyproject.toml
src-tauri/plugins/oai_price_tracker/oai_price_tracker/: main.py
src-tauri/plugins/oai_price_tracker/tests/: scraper_test.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api_key_crud.rs  assistant.rs  assistant_crud.rs  history_crud.rs  schemas.rs
src-tauri/src/database/: crud.rs  database.rs  models.rs
src-tauri/src/database/sql/history/: insert.sql  update.sql
src-tauri/src/database/sql/init/: create_history_table.sql
src-tauri/src/db_services/: crud.rs  database.rs  models.rs
src-tauri/src/db_services/sql/api_key/: create.sql  read.sql  update.sql
src-tauri/src/db_services/sql/assistants/: create.sql  delete.sql  read_all.sql  read_one.sql  update.sql
src-tauri/src/db_services/sql/history/: create.sql  delete.sql  read.sql  read_one.sql  update.sql
src-tauri/src/openai_tools/: chat_bot.rs  oai_scraper.rs
src-tauri/src/plugins/: README.md  pyproject.toml
src-tauri/src/plugins/plugins/: build.py  requirements.txt
src/api/: assistant.ts  assistant_crud.ts  database.ts  history.ts  history_crud.ts
src/components/: AssistantMessage.tsx  ChatInput.tsx  ChatWindow.tsx  Header.tsx  HistoryItem.tsx  SettingsMenu.tsx  Sidebar.tsx  Spinner.tsx  UserMessage.tsx  UserProfile.tsx
src/components/ui/: .select.tsx.swp  dialog.tsx  input.tsx  select.tsx
