[package]
name = "chatxpress"
version = "0.0.0"
description = "A customizable chatbot for use with openai's api."
authors = ["Joshua Scina"]
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"

[lib]
name = "chatxpress"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.16.0"
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
