[package]
name = "chatxpress"
version = "0.0.1"
description = "A customizable chatbot for use with openai's api."
authors = ["Joshua Scina"]
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"

[lib]
name = "chatxpress"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.18.2"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
lazy_static = "1.4.0"
tiktoken-rs = { version = "0.5.8", features = ["async-openai"] }
pyo3 = { version = "0.20.2", features = ["auto-initialize", "serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
